# autogen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
lower_third/: package-lock.json  package.json  remotion.config.ts
lower_third/src/: Composition.tsx
misc/porto-intro/: package-lock.json  package.json
misc/porto-intro/src/: PortoIntro.tsx  Root.tsx
reaction/: .gitignore  README.md  build_reaction.cmd  continuous_rendering.py  ffmpeg.pyi  load_data.py  package-lock.json  package.json  pyproject.toml  remotion.config.ts  render_single.py  requirements.txt  run.bat  tailwind.config.js  tsconfig.json
reaction/public/: config.json  config47.json
reaction/public/10779/: config.json
reaction/src/: Background.tsx  Reaction.tsx  ReactionCardOnly.tsx  ReactionHorizontal.tsx  Root.tsx  build_reaction.py  helper.ts  style.css  types.ts
reaction/src/Reaction/: Card.tsx  Circle.tsx  FitText.tsx  Title.tsx  UserVideo.tsx  Video.tsx  constants.ts  data.json
team/: .gitignore
team/video/: .gitignore  README.md  package.json  remotion.config.ts  tailwind.config.js
team/video/public/: team.json
team/video/public/audio/: sound.m4a
team/video/src/: Root.tsx  Team.tsx  style.css
team/video/src/Team/: BigPerson.tsx  BigTextIntro.tsx  FullPerson.tsx  FullTeam.tsx  constants.ts
team_hypeshot/: .pre-commit-config.yaml  .ruff.toml  README.md  install.bat  pyproject.toml  pyrightconfig.json  render_video.py  requirements.txt  run.bat
team_hypeshot/video/: package-lock.json  package.json
team_hypeshot/video/src/: Root.tsx  style.css
team_hypeshot/video/src/Team/: BigPerson.tsx  FullSizeText.tsx  FullTeam.tsx
team_hypeshot/video/src/transition/: ShowUp.tsx  TriangleEntrance.tsx
teams_intro_video/: .gitignore  gen_slideshow.py  run.bat  slideshow_build.bat  slideshow_run.bat
teams_intro_video/2024/: AA.txt  AE.txt  AP.txt  AW.txt  EU.txt  LA.txt  NA.txt  NE.txt  NE_vertical.txt
teams_intro_video/beta/: script.txt
