[tool.poetry]
name = "team_hypeshot"
version = "0.1.0"
description = "Team Hypeshot project"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
carvekit = "4.1.2"
IPTCInfo3 = "2.1.4"
Pillow = "^10.3.0"
torch = "2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
